package com.expsn.cooker.model;

public enum Difficulty {
    EASY,
    MEDIUM,
    HARD
}
